--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.12.1",
     "lucide-react": "^0.474.0",
     "motion": "^12.3.1",
     "next": "15.1.6",
